# summaly-py

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-build.yml
docker/: backend.py
src/pysummaly/: __init__.py  server.py  summaly.c  summaly.py  summaly.pyx
src/pysummaly/plugins/: __init__.py  branchio.py  skeb.py  wikipedia.py  youtube.py
