[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pysummaly"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AmaseCocoa", email = "amase.cocoa@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.5",
    "orjson>=3.10.7",
    "aiohttp[speedups]>=3.10.3",
    "lxml>=5.3.0",
    "aiohttp-client-cache>=0.11.1",
    "fastapi-cache2>=0.2.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
server = [
    "fastapi-cache2>=0.2.2",
    "fastapi>=0.112.0",
    "granian>=1.5.2",
]
[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"